--- a/fichtner-ewms/skript.tex
+++ b/fichtner-ewms/skript.tex
@@ -782,7 +782,7 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
     genügt es zu zeigen, dass
     $\{\underbrace{[\omega_1,\ldots,\omega_n]}_{\times_{i=1}^n
       \{\omega_i\}}\} \in
-    \otimes_{i=1}^n \CF_i$ für $\omega_i\in\Omega_i, i=1,\ldots,n$ \todo{stimmt das omega-i hier?}. Der Rest
+    \otimes_{i=1}^n \CF_i$ für $\omega_i\in\Omega_i, i=1,\ldots,n$. Der Rest
     ist klar, denn $\{\omega_i\}\in\CF_i=\FP(\Omega_i)$
   \item Lässt man oben den Zusatz "`abzählbar"' weg, gibt es
     Probleme.
