- weitere Fehler verbessert
git-svn-id: https://svn.lug-jena.de/uni-skripte@1040 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/fichtner-ewms/skript.tex
+++ b/fichtner-ewms/skript.tex
@@ -594,7 +594,7 @@ $\sigma$-Algebra über $\Omega$.
 
 \begin{beispiel}
   \begin{enumerate}[(1)]
-  \item \highl{Nullmaß} $\CO\colon \CO(A)=0$ für $a\in\CF$
+  \item \highl{Nullmaß} $\CO\colon \CO(A)=0$ für $A\in\CF$
   \item \highl{Dirac-Maß}: Sei
     $\omega\in\Omega$. Setzen $\delta_\omega(A)=
     \begin{cases}
@@ -623,14 +623,15 @@ $\sigma$-Algebra über $\Omega$.
   \item[zu 1)] $\mu(\emptyset)=\sum_{k=1}^\infty \alpha_i\mu_i
     (\emptyset)=0$
   \item[zu 2)] Seien $(A_k)_{k=1}^\infty$ paarweise disjunkt aus
-    $\CF$.\\
-    $\mu(\bigcup_{k=1}^\infty A_k)=\sum_{i\in I}\alpha_i
-    \underbrace{\mu_i \left(\bigcup_{k=1}^\infty A_k\right)}_{\sum_{k=1}^\infty
-      \mu_i (A_k)}= \sum_{i\in I} \alpha\sum_{k=1}^\infty \mu_i (A_k)$
-    Nach dem großen Umordnungssatz folgt: $\sum_{k=1}^\infty
-    \underbrace{\sum_{i\in I} \alpha_i \mu_i(A_k)}_{\mu(A_k)} =
-    \sum_{k=1}^\infty \mu(A_k)$
+    $\CF$.
+    \begin{align*}
+      \mu(\bigcup_{k=1}^\infty A_k) &= \sum_{i\in I} \alpha_i \mu_i
+	 \left(\bigcup_{k=1}^\infty A_k\right) = \sum_{i\in I}
+	 \alpha_{i}\sum_{k=1}^\infty \mu_i (A_k)\\
+      &= \sum_{k=1}^\infty \underbrace{\sum_{i\in I} \alpha_i
+	 \mu_i(A_k)}_{\mu(A_k)} = \sum_{k=1}^\infty \mu(A_k)
   \end{itemize}
+    Im letzten Schluss musste der große Umordnungssatz angewendet werden.
 \end{proof}
 \end{satz}
 
@@ -639,6 +640,7 @@ $\sigma$-Algebra über $\Omega$.
   Sei $\mu$ ein Maß auf $[\Omega,\CF]$. Für alle Folgen
   $A_1,\ldots, A_n\in\CF$, die paarweise disjunkt sind, gilt:
   \[\mu\left(\bigcup_{k=1}^n A_k\right)=\sum_{k=1}^n \mu(A_k)\]
+  Diese Eigenschaft heißt \highl[Additivität!endliche]{endliche Additivität}.
 \begin{proof}
   Wir setzen $B_k\colon=
   \begin{cases}
@@ -662,10 +664,8 @@ $\sigma$-Algebra über $\Omega$.
 
 \begin{remark}
   \begin{enumerate}
-  \item Die Eigenschaften aus \autoref{satz:folgenmass} heißt
-    \highl[Additivität!endliche]{endliche Additivität}.
-  \item Die zweite Eigenschaft in der Definition des Maßes heißt
-    \highl{$\sigma$-Additivität}.
+  \item Für $n=\infty$ im \autoref{satz:folgenmass} wird die Additivität als 
+    \highl{$\sigma$-Additivität} bezeichnet.
   \item \autoref{satz:folgenmass} impliziert, dass aus der
     $\sigma$-Additivität die endliche Additivität folgt. Die
     Umkehrung ist jedoch falsch.
@@ -689,14 +689,15 @@ $\sigma$-Algebra über $\Omega$.
   \item[zu (b) und (c)] $A\subseteq B\Rightarrow B=A\cup(B\setminus
     A) \Rightarrow\mu(B)=\mu(A\cup(B\setminus
     A)) \overset{\text{\autoref{satz:folgenmass}}}{=} \mu(A)+\mu(B\setminus A)$
-    Wir haben $\mu(B\setminus A)\geq 0\Rightarrow\mu(A)\leq\mu(B)$
+    Wir haben $\mu(B\setminus A)\geq 0\Rightarrow\mu(A)\leq\mu(B)$ und Teil
+    (b) ist gezeigt.\\
     Durch Umstellen erhält man $\mu(B\setminus A)=\mu(B) -
     \mu(A)$. Hierzu muss $\mu(A)<+\infty$ sein.
-  \item[ zu (a)] $A\cup B=A\cup (B\setminus A)\Rightarrow \mu(A\cup
-    B)= \mu(A)\cup\mu(B\setminus A)= \mu(A)+\mu(B\setminus A)$\\
+  \item[zu (a)] Wie oben haben wir: $A\cup B=A\cup (B\setminus A)\Rightarrow \mu(A\cup
+    B)= \mu(A\cup (B\setminus A))= \mu(A)+\mu(B\setminus A)$.\\
     Es gilt: $B\setminus A\subseteq B\overset{(b)}{\Rightarrow}
-    \mu(B\setminus A)\leq\mu(B)\Rightarrow\mu(A\cup B)\leq
-    \mu(A) +\mu(B)$
+    \mu(B\setminus A)\leq\mu(B)\Rightarrow \mu(A\cup B)-\mu(A)\leq \mu(B)
+    \Rightarrow \mu(A\cup B)\leq \mu(A) +\mu(B)$
   \end{itemize}
 \end{proof}
 \end{satz}
@@ -725,7 +726,7 @@ $\sigma$-Algebra über $\Omega$.
     \item $\bigcup_{k=1}^\infty A_k=\bigcup_{k=1}^\infty B_k$
     \item $\bigcup_{k=1}^\infty B_k=A_n$
     \end{enumerate}
-    Somit folgt: $\mu(\bigcup_{k=1}^\infty A_k)\overset{3.}{=}
+    Somit folgt: $\mu(\bigcup_{k=1}^\infty A_k)\overset{3}{=}
     \mu(\bigcup_{k=1}^\infty B_k)\overset{1,2}{=} \sum_{k=1}^\infty
     \mu(B_k) =\lim_{n\rightarrow\infty} \sum_{k=1}^n \mu(B_k)
     \overset{1}{=} \lim_{n\rightarrow\infty} \mu(\bigcup_{k=1}^n
@@ -794,9 +795,9 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
 
 \begin{definition}
   Ein Maß $\mu$ auf $\times_{i=1}^n [\Omega_i,\CF_i]$ heißt
-  \highl{Produkt der Maße} $\mu_1,\ldots,
+  \highl[Produktmaß]{Produkt der Maße} $\mu_1,\ldots,
   \mu_n$\footnote{$\mu=\times_{i=1}^n \mu_i$}, wenn gilt
-  $\mu(\times_{i=1}^n A_i) =\prod_{i=1}^n \mu_i(A_i)$.
+  \[\mu(\times_{i=1}^n A_i) =\prod_{i=1}^n \mu_i(A_i)\]
 \end{definition}
 
 \begin{satz*}
@@ -880,15 +881,15 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
 \end{satz}
 
 \begin{satz}
-  Für alle $A\subseteq\R^n$ mit $A$ abzählbar gilt:
+  Für alle abzählbaren $A\subseteq\R^n$ gilt:
   \[\ell^{(n)} (A)=0\]
 \begin{proof}
   $A=\bigcup_{x\in A} \{x\}=\bigcup_{[x_1,\ldots,x_n]\in A}
   \{[x_1,\ldots, x_n]\}$\\
   Da $A$ abzählbar ist, folgt $\ell^{(n)}(A)=\sum_{x\in A}
-  \ell^{(n)} \{[x]\}$. Nunmehr ist noch zu zeigen, dass $\ell^{(n)}
+  \ell^{(n)} \{x\}$. Nunmehr ist noch zu zeigen, dass $\ell^{(n)}
   (\{[x_1,\ldots,x_n]\}) =0$. Dies ist gleich: $\ell^{(n)}
-  \times_{i=1}^n \{x_i\}= \prod_{i=1}^n \ell (\{x_i\})=0$
+  \times_{i=1}^n \{x_i\}= \prod_{i=1}^n \ell (\{x_i\})=0$.
 \end{proof}
 \end{satz}
 
@@ -941,7 +942,7 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
 \begin{satz}
 \label{satz:eigensch-vert-152}
   Eine Verteilungsfunktion $F$ eines Wahrscheinlichkeitsmaßes $P$
-  auf $[R,\FB]$ hat folgende Eigenschaften:
+  auf $[\R,\FB]$ hat folgende Eigenschaften:
   \begin{enumerate}[(F1)]
   \item $F(x)\leq F(y)\quad \forall (x\leq y)$ (monoton nicht fallend bzw. wachsend)
   \item $\lim_{n\rightarrow\infty} F(x_n)=F(x)$ mit $x\in\R, x_n\uparrow x$ (linksseitig stetig)
@@ -1036,7 +1037,7 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
     \Gl_A(\R^n)&= \frac{\ell^{(n)}(A\cap \R)}{\ell^{(n)} (A)}=
     \frac{\ell^{(n)}(A)}{\ell^{(n)} (A)} =1\\
     \Gl_A\left(\bigcup_k B_K\right)&= \frac{\ell^{(n)}((\bigcup
-      B_k)\cap A)}{\ell^{(n)} (A)}= \frac{\ell^{(n)}(\bigcup (B\cap
+      B_k)\cap A)}{\ell^{(n)} (A)}= \frac{\ell^{(n)}(\bigcup (B_{k}\cap
       A))}{\ell^{(n)} (A)}= \frac{\sum_k\ell^{(n)} (B_k\cap
       A)}{\ell^{(n)} (A)}\\
     &=\qquad \sum_k \Gl_A(B_k)
@@ -1103,7 +1104,7 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
   =1$:
   $P(\R)=\sum_{i\in } \alpha_i P_i(\R)=\sum_{i\in I} \alpha_i=1$. Nach
   der Definition gilt $F(x)=P((-\infty, x))=\sum_{i\in I} \alpha_i
-  \underbrace{P_i((-\infty, x))}_{=F_i(x)}$.
+  P_i((-\infty, x))= \sum_{i\in I} \alpha_{i} F_i(x)$.
 \end{proof}
 \end{satz}
 
@@ -1118,7 +1119,7 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
     Aus dem oben angeführten Satz folgt, dass die Binomialverteilung
     ein Wahrscheinlichkeitsmaß auf $[\R,\FB]$
     ist.\footnote{$(a+b)^n=\sum_{i=0}^n \binom{n}{i} a^i b^{n-i}; a=p,
-      b=1-p\Rightarrow (a+b)^n=1)$}
+      b=1-p\Rightarrow (a+b)^n=1$}
   \item \highl{Poissonverteilung} Gegeben ist
     $\lambda> 0$. Wir definieren:
     \[\pi_\lambda:= \sum_{i=0}^\infty \frac{\lambda^i}{i!}
