--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -2805,7 +2805,7 @@ jeden inneren Knoten $v$ die sortierte Liste $L(v)$ der in im Teilbaum mit Wurze
 gespeicherten Elemente (die Liste $A(u)$ eines Blattes $u$ kann auch leer sein).
 
 Wir beginnen mit einer Menge von Transformationen: jedes Blatt $u$ wird durch einen
-balancierten Binärbaum mit \abs{$A(u)$} Blättern ersetzt, so dass jedes Element von
+balancierten Binärbaum mit $\abs{A(u)}$ Blättern ersetzt, so dass jedes Element von
 $A(u)$ in den Blättern des Binärbaums abgelegt ist. Die Höhe des Baumes T ist demnach
 nun um $O(log (max_{u} \abs{A(u)}))$ gewachsen, nur beinhaltet nun jedes Blatt von
 T wenigstens ein Element.
