--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -2823,10 +2823,12 @@ beinhaltet, angefügt.
 \end{defini}
 
 \begin{bsp}
+  \begin{gather}
     L = (1,3,5,6,7,8,11,13,14,15,16)\\
     Raster_{4}(L) = (6,13)\\
     Raster_{2}(L) = (3,6,8,13,15)\\
     Raster_{1}(L) = L
+  \end{gather}
 \end{bsp}
 
 Die früher vorgestellte Strategie für paralleles Merge-Sort basiert auf einer
