--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -2887,11 +2887,12 @@ im Schritt $3alt(x)+1$ und schlieﬂlich die vollst‰ndige Liste im Schritt $3alt(x
   \KwOut{$\forall$ v: $L_{s+1}[v]$, v voll, wenn s+1$\geq$ 3alt(v)}
 
   \Forpar{$\forall$ aktiven Knoten $v$}{
-    L'_{s+1}[w] = Sample($L_{s}[w])$ \;
-    L'_{s+1}[u] = Sample($L_{s}[u])$ \;
-    Merge($L_{s+1}'[u], L'_{s+1}[w])$ zu $L_{s+1}[v]$ \;
+    L'_{s+1}[w] = Sample($L_{s}[w])$\;
+    L'_{s+1}[u] = Sample($L_{s}[u])$\;
+    $Merge(L_{s+1}'[u], L'_{s+1}[w])$ zu $L_{s+1}[v]$\;
   }
 \end{algorithm}
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
