--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -2503,7 +2503,7 @@ Ergebnis: Satz * geht auch mit O(n) \Work.
 
 \begin{algorithm}
   \dontprintsemicolon
-  \caption{Parallele Suche in einer sortierten Folge nach \highl{Kruskel}}
+  \caption{Parallele Suche in einer sortierten Folge nach \highl{Kruskal}}
   \KwIn{Ein aufsteigend sortiertes Feld $A$ von $n$~Zahlen und ein gesuchtes
     Element~$x$}
   \KwOut{Index~$i$, so dass $A[i]\leq x<A[i+1]$}
@@ -2908,16 +2908,34 @@ im Schritt $3alt(x)+1$ und schließlich die vollständige Liste im Schritt $3alt(x
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Selektion}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%
+% nachträglich eingefügt %
+%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\highl{Input}: $A=(a_{1}, \ldots, a_{n})$, $k := 1 \leq k \leq n$ \\
+\highl{Output}: Element $a_{i}$ mit $Rang(a_{i}:A)=k$ \\
+
+
+
+\begin{description}
+  \item[Lösung:] \\
+    SORT A \Rightarrow $O(log n)$ TIME mit $O(n log n)$ WORK nicht optimal,
+    da man seriell mit $O(n)$ WORK auskommt.\\
+  \\
+  \item[Ziel:] CREW (EREW, optional): $O(log n log log n)$ TIME, $O(n)$ WORK \\
+    nutzen R.Cole und Accelerated Cascading
+\end{description}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 Median der Mediane-Technik; R.\,Cole; Prefixsummenalgo.; Litheratur liefert u.\,a. 2
 Ansätze: Akl (s. Info 3), R.Cole
 
 Akl: 0<x<1: O($n^{x}$) \Time optimal
-INPUT: Folge ($a_{1},\ldots,a_{n}$), k: 1$\leq$k $\leq$n
-OUTPUT: El. vom Rang $k$
 
 Fälle k=1,n. $O(\log\log n)$ CRCW, optimal \Work $O(n)$
 Median: nicht erreichbar.
@@ -2928,41 +2946,71 @@ Die Berechnung von $par_{n}$ erfordert auf der PRIORITY-CRCW-PRAM
 $\omega(\frac{\log n}{\log\log n})$ \Time. (Beweis schwer!) Die gleiche
 Schranke gilt für den Median.
 
-Ziel: $O(\log n \log\log n)$ \Time, CREW (EREW) \emph{optimal}. (bekannt ist
-sogar $O(\log n\log^{\ast}n))$
 
-Alg. Selektion
-INPUT: A=($a_{1},\ldots,a_{n}$), k: 1$\leq$ k $\leq$ n
-OUTPUT: \ldots
-begin
-\begin{Verbatim}
-n0 := n; s := 0
-while ns > n/log(n) do
-s := s+1
-Zerlege A in Blöcke Bi
-for i := 1 to n/log(n) pardo
-mi := median(Bi) (seriell linear) (O(\log $n_{s}$)\time O($n_{s}$)\work)
-a := median(m1,\ldots,mnlogn) (mit Cole) (O(\log $n_{s}$)\time O(\frac{$n_{s}$}{\log $n_{s}$}\log $n_{s}$)\work
-Bestimme s1,s2,s3 - Anzahl der Elemente < a, =a, >a (mit Prefixsummenalgo in O(\log n)\time optimal)
-Case statement s1 < k $\Leftarrow$ s1+s2 -> OUTPUT ä" (}O(\log$n_{s}$)\time)
-k $\Leftarrow$ s1 -> packe in Array, ns := s1        (})
-k > s1 + s2  -> packe in Array, ns := s3             (})
-\end{Verbatim}
+\begin{algorithm}
+  \dontprintsemicolon
+  \caption{Algorithmus: Parallele Selektion}
+  \label{alg:parsel}
+  \KwIn{$A=(a_{1},\ldots,a_{n}), k: 1 \leq k \leq n$}
+  \KwOut{$ldots$}
+  $n_{0} := n$\;
+  $s := 0$\;
+  \While{$n > \frac{n}{log n}$} {
+    $s := s+1$\;
+    zerlege $A$ in Blöcke $B_{i}$ mit je log n Elementen; Berechne den %
+    Median $m_{i}$ für Block $B_{i}$ parallel \;
+    Berechne den Median der Mediane: $m$\;
+    Bestimme die Anzahlen $s_{1}$, $s_{2}$, $s_{3}$ der Elemente von $A$, %
+    die kleiner, gleich oder größer als $m$ sind (mit Präfixsumme in $O(log n)$ %
+    TIME optimal)\;
+    \If{$s_{1} < k \leq s_{1}+s_{2}$}{
+       OUTPUT m
+    }
+    \If{$k \leq s_{1}$}{
+       kontrahiere die Elemente von A, die <m sind, in aufeinander folgende %
+       Positionen \;
+       $s:=s_{1}$
+    }
+    \If{$k > s_{1}+s_{2}$}{
+       kontrahiere \ldots\;
+       $n_{s}=s_{3}$\;
+       $k := k - (s_{1}+s_{2})$
+    }
+  }
+  SORT die restlichen $n_{s} \leq \frac{n}{log n}$ Elemente, gib das k-te %
+  Element aus
+\end{algorithm}
 
-$ns$\ldots Zahl der Elemente nach Schritt $s$
+$n_{s}$\ldots Zahl der Elemente nach Schritt $s$
 
-dazu:
-\begin{gather*}
-  \frac{n}4 \leq Rang(a:A) \leq \frac34 n
-\end{gather*}
 
-$a\geq$ Hälfe der Mediane $m_{1},\ldots,m_{\frac{n}{\log n}}$, jeder
-Median ist $\geq\frac{\log n}{2}$ Elemente
-\begin{gather}
-  \frac{n_{s}}{2\log n}\frac{\log n}{2}=\frac{n_{s}}{4}\\
-  n_{s} \leq \frac34 n
-\end{gather}
-$\Rightarrow O(\log n\log\log n) \Time, O(n)$ \Work
+\highl{Leistungsparameter:} \\
+\begin{description}
+  \item[Zeile 5:] $\abs{B_{i}} = log n$ - seriell: bestimme $m_{i}$ \rightarrow pardo \\
+     gesamt $O(log n)$ TIME mit $O(n_{s})$ WORK
+  \item[Zeile 6:] mit R. Cole wird sortiert \rightarrow Mittelwert problemlos abzählbar \\
+    $O(log n)$ TIME, $O(\frac{n}{log n} * log (\frac{n}{log n})) = O(\frac{n}{log n} * log n) = O(n)$ WORK
+  \item[Zeile 7:] mit Präfixsumme: Markiere die Elemente von $a_{i}$ parallel
+    mit \{1,2,3\}, je nachdem, ob $a_{i}" kleiner, gleich oder größer als $m$
+    ist \rightarrow $O(1)$ TIME, $O(n)$ WORK \\
+    mit Präfixsumme $O(log n) / O(n)$
+  \item[Zeile 8:] $O(log n) / O(n)$
+\end{description}
+
+\begin{lemma}
+  $n_{s+1} \leq \frac{3 n_{s}}{4}$ \\
+  Beweis mittels Median-der-Mediane-Argument
+\end{lemma}
+
+\begin{folger}
+  fertig mit Schritt 3 nach $O(log log n)$ Iterationen \\
+  WORK: $\sum_{s=1}^{\infty} O(n_{s}) = O(n)$\\
+  TIME: $O(log n log log n)$
+\end{folger}
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Parallelisierbarkeit}
 
