--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -2922,11 +2922,10 @@ im Schritt $3alt(x)+1$ und schließlich die vollständige Liste im Schritt $3alt(x
 
 
 \begin{description}
-  \item[Lösung:] \\
+  \item[Lösung:] 
     SORT A \Rightarrow $O(log n)$ TIME mit $O(n log n)$ WORK nicht optimal,
-    da man seriell mit $O(n)$ WORK auskommt.\\
-  \\
-  \item[Ziel:] CREW (EREW, optional): $O(log n log log n)$ TIME, $O(n)$ WORK \\
+    da man seriell mit $O(n)$ WORK auskommt.
+  \item[Ziel:] CREW (EREW, optional): $O(log n log log n)$ TIME, $O(n)$ WORK 
     nutzen R.Cole und Accelerated Cascading
 \end{description}
 
