--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -2922,10 +2922,9 @@ im Schritt $3alt(x)+1$ und schließlich die vollständige Liste im Schritt $3alt(x
 
 
 \begin{description}
-  \item[Lösung:] 
-    SORT A \Rightarrow $O(log n)$ TIME mit $O(n log n)$ WORK nicht optimal,
+  \item[Lösung:] SORT A $\Rightarrow$ $O(log n)$ TIME mit $O(n log n)$ WORK nicht optimal,
     da man seriell mit $O(n)$ WORK auskommt.
-  \item[Ziel:] CREW (EREW, optional): $O(log n log log n)$ TIME, $O(n)$ WORK 
+  \item[Ziel:] CREW (EREW, optional): $O(log n log log n)$ TIME, $O(n)$ WORK;
     nutzen R.Cole und Accelerated Cascading
 \end{description}
 
@@ -2985,13 +2984,13 @@ $n_{s}$\ldots Zahl der Elemente nach Schritt $s$
 
 \highl{Leistungsparameter:} \\
 \begin{description}
-  \item[Zeile 5:] $\abs{B_{i}} = log n$ - seriell: bestimme $m_{i}$ \rightarrow pardo \\
+  \item[Zeile 5:] $\abs{B_{i}} = log n$ - seriell: bestimme $m_{i}$ $\rightarrow$ pardo \\
      gesamt $O(log n)$ TIME mit $O(n_{s})$ WORK
-  \item[Zeile 6:] mit R. Cole wird sortiert \rightarrow Mittelwert problemlos abzählbar \\
+  \item[Zeile 6:] mit R. Cole wird sortiert $\rightarrow$ Mittelwert problemlos abzählbar \\
     $O(log n)$ TIME, $O(\frac{n}{log n} * log (\frac{n}{log n})) = O(\frac{n}{log n} * log n) = O(n)$ WORK
   \item[Zeile 7:] mit Präfixsumme: Markiere die Elemente von $a_{i}$ parallel
     mit \{1,2,3\}, je nachdem, ob $a_{i}" kleiner, gleich oder größer als $m$
-    ist \rightarrow $O(1)$ TIME, $O(n)$ WORK \\
+    ist $\rightarrow$ $O(1)$ TIME, $O(n)$ WORK \\
     mit Präfixsumme $O(log n) / O(n)$
   \item[Zeile 8:] $O(log n) / O(n)$
 \end{description}
