--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -2990,7 +2990,7 @@ $n_{s}$\ldots Zahl der Elemente nach Schritt $s$
     $O(log n)$ TIME, $O(\frac{n}{log n} * log (\frac{n}{log n})) = O(\frac{n}{log n} * log n) = O(n)$ WORK
   \item[Zeile 7:] mit Präfixsumme: Markiere die Elemente von $a_{i}$ parallel
     mit \{1,2,3\}, je nachdem, ob $a_{i}" kleiner, gleich oder größer als $m$
-    ist $\rightarrow$ $O(1)$ TIME, $O(n)$ WORK \\
+    ist $\Rightarrow$  $O(1)$ TIME, $O(n)$ WORK \\
     mit Präfixsumme $O(log n) / O(n)$
   \item[Zeile 8:] $O(log n) / O(n)$
 \end{description}
