Par. Selektion - Fehler
git-svn-id: https://svn.lug-jena.de/uni-skripte@1060 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -2988,12 +2988,12 @@ $n_{s}$\ldots Zahl der Elemente nach Schritt $s$
 \highl{Zeile 5:} $\abs{B_{i}} = log n$ - seriell: bestimme $m_{i}$ $\rightarrow$ pardo \\
      gesamt $O(log n)$ TIME mit $O(n_{s})$ WORK
 
-\highl{Zeile 6:} mit R. Cole wird sortiert $\rightarrow$ Mittelwert problemlos abzählbar $\Rightarrow$
+\highl{Zeile 6:} mit R. Cole wird sortiert $\rightarrow$ Mittelwert problemlos abzählbar \Rightarrow
     $O(log n)$ TIME, $O(\frac{n}{log n} * log (\frac{n}{log n})) = O(\frac{n}{log n} * log n) = O(n)$ WORK
 
 \highl{Zeile 7:} mit Präfixsumme: Markiere die Elemente von $a_{i}$ parallel
     mit \{1,2,3\}, je nachdem, ob $a_{i}" kleiner, gleich oder größer als $m$
-    ist; $O(1)$ TIME, $O(n)$ WORK $\Rightarrow$ mit Präfixsumme $O(log n) / O(n)$
+    ist; $O(1)$ TIME, $O(n)$ WORK \Rightarrow mit Präfixsumme $O(log n)$ / $O(n)$
 
 \highl{Zeile 8:} $O(log n) / O(n)$
 
