--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -3186,7 +3186,7 @@ Q\times\Gamma\rightarrow Q\times\Gamma\times\{L,R\}$.
 \begin{description}
   \item[Zu zeigen:] es existiert eine NC-berechenbare Funktion f: wenn $I_{L}$ ein
     Input-Beispiel für L ist, so ist $f(I_{L})=I_{CVP}$ ein Input-Beispiel für CVP: \\
-    $I_{L} \in L \Rightleftarrow Wert(f(I_{L})) = Wert(I_{CVP}) = 1$
+    $I_{L} \in L \Leftrightarrow Wert(f(I_{L})) = Wert(I_{CVP}) = 1$
 \end{description}
 
 Damit muss man einen $\NC$-berechenbaren Algorithmus
