• schmeisser-hoehere-ana/skript.latex   · Das Paket mathtools hinzugefügt und daraus den Befehl \mathclap für den     Text unter der \underbrace verwendet.
git-svn-id: https://svn.lug-jena.de/uni-skripte@1074 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -53,6 +53,7 @@
 \usepackage{svn}
 \usepackage{ifpdf}       % Erkennung, ob PDF generiert wird; nützlich zur
                          % Unterscheidung bei Grafiken \input{XYZ.pdf_t}
+\usepackage{mathtools}
 
 \makeatletter
 % setzt / als Trenner zwischen Abschnitt und Satznummer
@@ -373,7 +374,7 @@
     \end{gather*}
     $\dim l_{1}(\N) = \infty$, da
     $(e_{j}=(0,\ldots,0,
-    \underbrace{1}_{\makebox[0pt][c]{j\text{-te Position}}},0,\ldots))$
+    \underbrace{1}_{\mathclap{j\text{.~Position}}},0,\ldots))$
     mit $j\in\N$ Teilmenge von $l_{1}(\N)$ ist und dieses offensichtlich
     die Dimension\,$\infty$ hat.
   \end{enumerate}
