--- a/fey-recharch/skript.latex
+++ b/fey-recharch/skript.latex
@@ -1,20 +1,26 @@
-%
-% scrreprt trifft am Besten die Bedürfnisse eines Skripts, das ganze wird
-% zweiseitig (twoside), d.h. es wird zwischen linker und rechter Seite
-% unterschieden, und wir verwenden zwischen den Absätzen einen Abstand
-% von einer halben Zeile (halfparskip) und dafür keinen Absatzeinzug,
-% wobei die letzte Zeile eines Absatzes zu min. 1/4 leer ist.
+% Einige zusätzliche Informationen für rubber
+%  rubber erkennt nicht, dass die Datei weg kann, daher sagen wir es ihm
+% rubber: clean $base.thm
+%  rubber soll nach Änderungen an der Datei nochmal bauen
+% rubber: watch $base.thm
+% rubber: makeidx.tool      xindy
+% rubber: makeidx.language  german-din
+% rubber: makeidx.modules   indexstyle.xdy
 
-\documentclass[halfparskip*,german,twoside]{scrbook}
+\RequirePackage[l2tabu,orthodox]{nag}  % nag überprüft den Text auf veraltete
+                   % Befehle oder solche, die man nicht in LaTeX verwenden
+                   % soll -- l2tabu-Checker in LaTeX
+
+\documentclass[parskip=half*,ngerman,draft,twoside]{scrreprt}
 
 \usepackage{ifthen}
-\usepackage{index}
-% \usepackage[final]{graphicx}  % Für Grafiken
-\usepackage{color}
-\usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue]{hyperref}
+\usepackage{makeidx}
+\usepackage[final]{graphicx}  % Für Grafiken
+\usepackage{xcolor}
+\usepackage[draft=false,breaklinks,colorlinks,bookmarksnumbered,linkcolor=blue]{hyperref}
 
 \usepackage[latin1]{inputenc}
-\usepackage{ngerman}
+\usepackage{babel}
 % \usepackage{nicefrac}
 % \usepackage{tabularx}
 
@@ -31,14 +37,6 @@
 % T1-Schriften verwenden -- notwendig für PDFs
 \usepackage[T1]{fontenc}
 
-\usepackage[intlimits,leqno]{amsmath}
-\usepackage{amssymb}     % wird für \R, \C,... gebraucht
-\usepackage[thmmarks,hyperref]{ntheorem} % für die Theorem-Umgebungen
-                                         % (satz, defini, bemerk)
-\usepackage{xspace}      % wird weiter unten gebraucht
-\usepackage{slashbox}    % für schräge Striche links oben in der
-                         % Tabelle; s. texdoc slashbox
-
 \usepackage{paralist}    % besseres enumerate und itemize und neue
                          % compactenum/compactitem; s. texdoc paralist
 
@@ -47,59 +45,14 @@
                          % dafür muss in SVN noch das Flag svn:keywords
                          % auf "LastChangedRevision LastChangedDate"
                          % gesetzt werden
-% \usepackage{ifpdf}       % Erkennung, ob PDF generiert wird; nützlich zur
-                         % Unterscheidung bei Grafiken \input{XYZ.pdf_t}
+\usepackage{fixltx2e}
+\usepackage[final]{microtype} % Verbesserung der Typographie
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
 \addtokomafont{sectioning}{\boldmath}
 
-% nach dem Theoremkopf wird ein Zeilenumbruch eingefügt, die Schrift des
-% Körpers ist normal und der Kopf wird fett gesetzt
-\theoremstyle{break}
-\theorembodyfont{\normalfont}
-\theoremheaderfont{\normalfont\bfseries}
-\theoremnumbering{arabic}
-
-% Die folgenden Umgebungen werden einzeln nummeriert und am Ende jedes
-% Kapitels zurückgesetzt
-\newtheorem{satz}{Satz}[chapter]
-\newtheorem{bemerk}{Bemerkung}[chapter]
-\newtheorem{defini}{Definition}[chapter]
-\newtheorem{bsp}{Beispiel}[chapter]
-\newtheorem{festl}{Festlegung}[chapter]
-
-% Die folgenden Theoremumgebungen bekommen keine Nummer
-\theoremstyle{nonumberbreak}
-\newtheorem{fakt}{Fakt}
-
-\theoremheaderfont{\scshape}
-\theorembodyfont{\normalfont}
-% Das Zeichen am Ende eines Beweises
-\theoremsymbol{\ensuremath{_\blacksquare}}
-% \theoremsymbol{q.\,e.\,d.}
-\newtheorem{proof}{Beweis:}
-
-% Hier die Definition, wie \autoref die Umgebungen nennen soll, die mit
-% \newtheorem definiert wurden
-\newcommand*{\satzautorefname}{Satz}
-\newcommand*{\bemerkautorefname}{Bemerkung}
-\newcommand*{\definiautorefname}{Definition}
-\newcommand*{\bspautorefname}{Beispiel}
-\newcommand*{\festlautorefname}{Festlegung}
-\newcommand*{\proofautorefname}{Beweis}
-% Zwischen Unter- und Unterunterabschnitten sollte nicht unterschieden
-% werden.
-\renewcommand*{\subsectionautorefname}{Abschnitt}
-\renewcommand*{\subsubsectionautorefname}{Abschnitt}
-
 \pagestyle{headings}
-
-\newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
-\newcommand*{\C}{\mathbb{C}}      % komplexe Zahlen
-\newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
-\newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
-\newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
 
 % Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, können sie
 % einfach mit \help{Ich verstehe das nicht} hervorgehoben werden. Dies
@@ -122,68 +75,26 @@
 % Index. siehe auch die Datei indexstyle.xdy
 \newcommand*{\indexsection}{\minisec}
 
-% Für Leute, die nicht gern o.\,B.\,d.\,A. jedesmal eintippen wollen
-\newcommand*{\obda}{o.\,B.\,d.\,A.\xspace}
-
-% Diese Befehle sind dafür gedacht, dass die Symbole für "genau dann wenn"
-% im ganzen Dokument gleich aussehen. Außerdem erlaubt es eine schnelle
-% Veränderung aller Stellen, falls der Prof. doch nicht mehr gdw nimmt,
-% sondern \Leftrightarrow.
-\newcommand*{\gdw}{\ifthenelse{\boolean{mmode}}%
-			       {\mspace{8mu}gdw\mspace{8mu}}%
-			       {$gdw$\xspace}}
-\newcommand*{\gdwdef}{\ifthenelse{\boolean{mmode}}%
-			       {\mspace{8mu}gdw_{def}\mspace{8mu}}%
-			       {$gdw_{def}$\xspace}}
-
-% Um sicherzustellen, dass jeder Betrag-/jede Norm links und rechts die
-% Striche bekommt, sind diese Befehle da. Damit kann man nicht die
-% rechten Striche vergessen und es wird etwas übersichtlicher. (Vorschlag
-% ist aus amsldoc) \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
-\newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
-\newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
-
-% Das original Epsilon sieht nicht so toll aus
-\renewcommand*{\epsilon}{\varepsilon}
-% ... und mancheinem gefällt auch das Phi nicht
-\renewcommand*{\phi}{\varphi}
-
-% Manchmal möchte man Begriffe erklären oder etwas aufzählen, das aber
-% nicht fett gedruckt werden soll. Dazu diese Umdefinition einer
-% description mit normaler Schrift
-\newenvironment*{mdescription}%
-               {\renewcommand{\descriptionlabel}[1]%
-			      {\hspace\labelsep\normalfont ##1}%
-		 \begin{description}}%
-		 {\end{description}}
-		 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Kommandos von zsfsg.tex %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{alltt}
-\usepackage{graphics}
-\usepackage{graphicx}
 \graphicspath{{/}{zusammenfassung_ra_2/}{zusammenfassung_ra_1/zsfsg_leistungsbewertung_fehlertoleranz/}}
-% no color :-( why?
-%\newcommand{\todo}[1]{\textcolor{red}{ {\sl {\bf TODO:} #1}}}
 
 % mini cmds
-\newcommand{\fpga}{{\tt FPGA }}
-\newcommand{\fpgas}{{\tt FPGA's }}
-\newcommand{\asic}{{\tt ASIC }}
-\newcommand{\asics}{{\tt ASIC's }}
-\newcommand{\gpp}{{\tt GPP }}
-\newcommand{\gpps}{{\tt GPP's }}
-\newcommand{\clb}{{\tt CLB }}
-\newcommand{\clbs}{{\tt CLB's }}
+\newcommand*{\fpga}{{\tt FPGA }}
+\newcommand*{\fpgas}{{\tt FPGA's }}
+\newcommand*{\asics}{{\tt ASIC's }}
+\newcommand*{\gpp}{{\tt GPP }}
+\newcommand*{\gpps}{{\tt GPP's }}
 
-\newcommand{\frage}[1]{
+\newcommand*{\frage}[1]{
 \begin{tabular}[]{ll}
 	{\bf \textcolor{red}{ Frage:} } & {\sl \textcolor{red}{#1}}\\
 \end{tabular}
 
 }
-\newcommand{\antw}[1]{
+\newcommand*{\antw}[1]{
 {\bf Antwort: } #1\\\\
 } 
 
@@ -195,7 +106,7 @@
 \begin{document}
 
 \title{Rechnerarchitektur 1 und 2}
-\author{Prof. Dr. Fey}
+\author{Prof.\,Dr.\,Fey}
 \date{Semester: WS 2004/05, SS 2005}
 \maketitle
 
@@ -204,15 +115,15 @@
 {\itshape
 
   Dieses Skript ist eine Zusammenstellung von Informationen rund um
-  die Vorlesung Rechnerarchitektur von Prof. Dr. Fey. Es ist als
+  die Vorlesung Rechnerarchitektur von Prof.\,Dr.\,Fey. Es ist als
   Vorbereitung auf die Diplomprüfung entstanden und keine
   Vorlesungsmitschrift.
 
   Dieses Skript ist im Rahmen des
   \href{http://www.minet.uni-jena.de/~joergs/skripte/}{Projekts
   "`Vorlesungsskripte der Fakultät für Mathematik und Informatik"'}
-  entstanden und wird im Rahmen dieses Projekts weiter betreut. Das
-  Skript ist nach bestem Wissen und Gewissen entstanden. Denoch
+  entstanden und wird von dem Projekts weiter betreut. Das
+  Skript wurde nach bestem Wissen und Gewissen erstellt. Dennoch
   garantiert weder der auf der Titelseite genannte Dozent, noch die
   Mitglieder des Projekts für dessen Fehlerfreiheit. Für etwaige Fehler
   und dessen Folgen wird von keiner der genannten Personen eine Haftung
@@ -222,22 +133,22 @@
   \url{http://www.minet.uni-jena.de/~joergs/skripte/} des Projekts
   enthalten ist.
 
-  Diese Ausgabe trägt die Versionsnummer~\SVNLastChangedRevision\ und ist
-  vom \SVNDate. Eine (mögliche) aktuellere Ausgabe ist unter
-  \url{http://www.minet.uni-jena.de/~joergs/skripte/pdf/} verfügbar.
+  Diese Ausgabe trägt die Versionsnummer~\SVNLastChangedRevision{} und ist
+  vom \SVNDate{}. Eine neue Ausgabe könnte auf der Webseite des Projekts
+  verfügbar sein.
 
   Jeder ist dazu aufgerufen Verbesserungen, Erweiterungen und
   Fehlerkorrekturen für das Skript einzureichen bzw. zu melden oder selbst
   einzupflegen -- einfach eine eMail an die
   \href{mailto:skripte@listserv.uni-jena.de}{Mailingliste
-  \texttt{<skripte@listserv.uni-jena.de>}} senden. Weitere Informationen
+  \nolinkurl{<skripte@listserv.uni-jena.de>}} senden. Weitere Informationen
   sind unter der oben genannten Internetadresse des Projekts verfügbar.
 
   Hiermit möchten wir allen Personen, die an diesem Skript mitgewirkt
   haben, vielmals danken:
   \begin{itemize}
-   \item \href{mailto:ferdy@inf.uni-jena.de}{Fred Thiele \texttt{ferdy@inf.uni-jena.de}} (2005)
-   \item \href{mailto:chrisra@inf.uni-jena.de}{Christian Raschka \texttt{chrisra@inf.uni-jena.de}} (2005)
+   \item \href{mailto:ferdy@inf.uni-jena.de}{Fred Thiele \nolinkurl{ferdy@inf.uni-jena.de}} (2005)
+   \item \href{mailto:chrisra@inf.uni-jena.de}{Christian Raschka \nolinkurl{chrisra@inf.uni-jena.de}} (2005)
   \end{itemize}
 }
 
