• fey-recharch/skript.latex   fey-recharch/fragensammlung/fragensammlung.tex   fey-recharch/zusammenfassung_ra_1/zsfsg_leistungsbewertung_fehlertoleranz/skript.tex   fey-recharch/zusammenfassung_ra_2/zsfsg.tex   · Die Latex2.09‐Befehle in Latex2e‐Befehle umgewandelt.
  · In den Unterdateien die inaktiven Präampeln entfernt.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1081 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/fey-recharch/skript.latex
+++ b/fey-recharch/skript.latex
@@ -82,21 +82,19 @@
 \graphicspath{{/}{zusammenfassung_ra_2/}{zusammenfassung_ra_1/zsfsg_leistungsbewertung_fehlertoleranz/}}
 
 % mini cmds
-\newcommand*{\fpga}{{\tt FPGA }}
-\newcommand*{\fpgas}{{\tt FPGA's }}
-\newcommand*{\asics}{{\tt ASIC's }}
-\newcommand*{\gpp}{{\tt GPP }}
-\newcommand*{\gpps}{{\tt GPP's }}
+\newcommand*{\fpga}{\texttt{FPGA}}
+\newcommand*{\fpgas}{\texttt{FPGAs}}
+\newcommand*{\asic}{\texttt{ASIC}}
+\newcommand*{\asics}{\texttt{ASICs}}
+\newcommand*{\gpp}{\texttt{GPP}}
+\newcommand*{\gpps}{\texttt{GPPs}}
 
-\newcommand*{\frage}[1]{
-\begin{tabular}[]{ll}
-	{\bf \textcolor{red}{ Frage:} } & {\sl \textcolor{red}{#1}}\\
-\end{tabular}
-
+\newcommand*{\frage}[1]{%
+  \begin{tabular}{@{}ll@{}}%
+    \textbf{\textcolor{red}{Frage:}} & \textsl{\textcolor{red}{#1}}\\%
+  \end{tabular}%
 }
-\newcommand*{\antw}[1]{
-{\bf Antwort: } #1\\\\
-} 
+\newcommand*{\antw}[1]{\textbf{Antwort:} #1\\\\} 
 
 \makeindex
 
