• fey-recharch/fragensammlung/fragensammlung.tex   fey-recharch/zusammenfassung_ra_2/zsfsg.tex   · Alle Deppenapostrophe raus.
git-svn-id: https://svn.lug-jena.de/uni-skripte@1083 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/fey-recharch/zusammenfassung_ra_2/zsfsg.tex
+++ b/fey-recharch/zusammenfassung_ra_2/zsfsg.tex
@@ -14,7 +14,7 @@ die \emph{digitalen Signalprozessoren} (als Spezialfall eingebetteter
 Systeme), sowie \emph{rekonfigurierbare Hardware} behandelt.\\
 
 Die Universalprozessoren stellen Hochleistungsprozessoren für allgemeine
-Computeranwendungen mit PC's oder Workstations. Sie sind nützlich für
+Computeranwendungen mit PCs oder Workstations. Sie sind nützlich für
 allgemeine Software und existieren mit komplexen Betriebssystemen. Die
 Frage ist, ob der PC/Workstation die Lösung für alle Probleme ist?
 
@@ -160,7 +160,7 @@ kann jedoch sehr kostenintensiv werden. Für den Einsatz in
 prädestiniert. Für spezielle Aufgaben aus der \emph{digitalen
 Signalverarbeitung} werden \emph{digitale Signalprozessoren eingesetzt}.
 Hingegen werden \emph{anwendungsspezifische Prozessoren}, sogenannte
-\texttt{ASIP's} (\emph{application specific instruction processors}), für
+\texttt{ASIPs} (\emph{application specific instruction processors}), für
 klar umrissene Anwendungen entworfen, für die auf dem Markt keine
 Prozessorlösung vorhanden ist und für die ein eigens entwickelter
 Befehlssatz notwendig ist.\\
@@ -267,7 +267,7 @@ Fehler erstmals sichtbar.
 \end{center}
 
 Die wichtigste Klasse eingebetteter Systeme stellen die sogenannten
-digitalen Signalprozessoren (\texttt{DSP's}) dar. Diese könnte man
+digitalen Signalprozessoren (\texttt{DSPs}) dar. Diese könnte man
 definieren als "`\emph{elektronische Systeme zur digitalen
 Signalverarbeitung}"'.\\
 
@@ -294,27 +294,27 @@ Frequenzbereich}, \emph{Frequenz-Zeit-Transformation} und
 \emph{Korrelation}. Wesentliche Aufgaben umfassen \emph{iterative,
 numerische} Berechnungen mit Beachtung numerischer Präzision, eine durch
 Arrayzugriffe hohe Speicherbandbreite und natürlich
-Realzeit-Verarbeitung. \texttt{DSP's} müssen ihre Aufgaben effizient
+Realzeit-Verarbeitung. \texttt{DSPs} müssen ihre Aufgaben effizient
 ausführen bei gleichzeitiger Minimierung von Kosten, Leistungsverbrauch,
 Speicherbedarf und Entwicklungszeit.\\
 
 Da \texttt{DSP-}intensive Aufgaben heutzutage den Flaschenhals in vielen
 Rechneranwendungen darstellen und unter Berücksichtigung des
-Kostenfaktors sind \emph{general-purpose processors} (\texttt{GPP's}) nicht
-zum Einsatz in diesem Bereich geeignet. \texttt{DSP's} werden gewöhnlich
+Kostenfaktors sind \emph{general-purpose processors} (\texttt{GPPs}) nicht
+zum Einsatz in diesem Bereich geeignet. \texttt{DSPs} werden gewöhnlich
 für \emph{ein} Programm entwickelt, daher fällt die Komplexität für das
 zugehörige Betriebssystem relativ niedrig aus. Sie müssen häufig
 \emph{harten Realzeitanforderungen} genügen und sie verarbeiten einen
 potentiell unendlichen Datenstrom. Trotz der Kostenbeschränkungen finden
-in einigen Bereichen auch \texttt{GPP's} zunehmend Betätigungsfelder, etwa
+in einigen Bereichen auch \texttt{GPPs} zunehmend Betätigungsfelder, etwa
 Sprach- und Audiodatenkompression, Filterung, Modulation,
 Spracherkennung oder Signalsynthese und v.\,m. Mit dem \texttt{LINGO} wurde
 ein graphisches Format zur Darstellung von \texttt{DSP-}bezogenen Formeln
 geschaffen.
 
-\subsection{Algorithmen für \texttt{DSP's}}
+\subsection{Algorithmen für \texttt{DSPs}}
 
-In \texttt{DSP's} sind Algorithmen fest-verdrahtete, oder auch
+In \texttt{DSPs} sind Algorithmen fest-verdrahtete, oder auch
 Firmwareimplementierungen zur Berechnung von \emph{Standardfunktionen},
 ohne die Multiplikation. Wichtige Algorithmen sind \emph{CORDIC-} und
 \emph{Bit-}Algorithmen. Ein wesentliches Ziel war die \emph{Vermeidung
@@ -405,14 +405,14 @@ gibt, so läßt sich eine Grundstruktur festhalten. Ein \fpga besteht aus
 \includegraphics{fpga_clb}
 \end{center}
 
-Die \texttt{CLB's} werden durch \emph{Schaltmatrizen} gesteuert. Diese
+Die \texttt{CLBs} werden durch \emph{Schaltmatrizen} gesteuert. Diese
 Matrizen können mittels
 \emph{fuse/antifuse}-Techniken
 oder SRAM/EPROM-Speicherzellen geschalten werden. An den
 Leitungskreuzungen stehen also Schalter zur Verfügung und die
 konfigurierbaren Logikblöcke können \emph{fein} oder {grob-granular}
 bezüglich der Funktionalität sein. Das Haupteinsatzgebiet von \fpgas
-besteht im \emph{rapid prototyping}, also dem Test von \texttt{ASIC's}.
+besteht im \emph{rapid prototyping}, also dem Test von \texttt{ASICs}.
 
 \subsection{Konfiguration von Logikblöcken und Verbindungen}
 
@@ -748,15 +748,15 @@ Algorithmen. Letztere dienen dazu die optimale Implementierung
 
 Der Produktivitätszuwachs des Schaltungsentwurfes liegt hinter dem
 Zuwachs an zur Verfügung stehender Halbleiterfläche zurück. In diesem
-Zusammenhang spricht man von der \emph{Designkrise} und \texttt{IP's}
+Zusammenhang spricht man von der \emph{Designkrise} und \texttt{IPs}
 (\emph{intellectual properties}) werden als Lösung dafür betrachtet. Es
 werden bereits entworfene und verifizierte Schaltungsblöcke
 (\emph{design reuse}) wiederverwendet. Dies gilt in zunehmenden Maß auch
 für hochkomplexe integrierte Schaltungen. Diese Schaltungsblöcke werden
-als IP's angeboten. Dabei werden Schaltungsblöcke, ein gesamtes Bauteil
+als IPs angeboten. Dabei werden Schaltungsblöcke, ein gesamtes Bauteil
 oder eine Funktion als Baustein standardisiert geboten. Entsprechend dem
 \emph{Entwurfsgrades} werden diese eingeteilt in \emph{Soft, Firm,
-Hard-Ip's}.
+Hard-Ips}.
 
 \paragraph{Soft-IP.} Diese werden in einer Hardwarebeschreibungssprache
 beschrieben und sind vollständig synthetisierbar, sehr flexibel und
@@ -968,7 +968,7 @@ set). Merkmale:
 
 \subsection{Funktionales Trennen}
 $\rightarrow$ für unterschiedliche Operationen stehen unterschiedliche
-ALU's zur Verfügung, wobei einzelne ALU's für ihre Aufgabe optimiert
+ALUs zur Verfügung, wobei einzelne ALUs für ihre Aufgabe optimiert
 sind und zeitlich parallel arbeiten können.
 
 \subsection{Pipelining}
@@ -1097,10 +1097,10 @@ Gitterstrukturen. Entspricht dem klassischen SIMD-Prinzip.
 	\item MasParI und II.
 		\begin{itemize}
 			\item MP1/2 bis 90iger in betrieb
-			\item Vorrechner, Steuerfeldeinheit, Feld aus 16384 PE's
+			\item Vorrechner, Steuerfeldeinheit, Feld aus 16384 PEs
 			\item PE: 32Bit Architektur mit 4Bit Datenpfaden
 			\item MP2: 32Bit Datenpfade
-			\item lokales Netz: Verbindung der Nachbar-PE's
+			\item lokales Netz: Verbindung der Nachbar-PEs
 			\item globales Netz: 3-stufiges CLOS-Netzwerk
 		\end{itemize}
 \end{itemize}
@@ -1251,7 +1251,7 @@ Gitterstrukturen. Entspricht dem klassischen SIMD-Prinzip.
 				Gültigkeitsstatus, 1 Bit für exklusiv-Status; muss
 				ungültigkeits nachrichten an alle versenden (traffic!)
 			\item Variante 3: n-pointers + rundruf; verbesserte variante
-				2: zusätzlicher Platz für n Zahlen der ProzessorID's, 
+				2: zusätzlicher Platz für n Zahlen der ProzessorIDs, 
 			\item Variante 4: Verlinkte Liste: Basiszeiger für jeden
 				Block, Verlinkte Liste auf alle Prozessoren, die sich
 				den Speicher teilen; Ungültigkeitsnachrichten können
