• zusammenfassung_ra_2/zsfsg.tex   · Kleine Verbesserungen.
git-svn-id: https://svn.lug-jena.de/uni-skripte@1088 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/fey-recharch/zusammenfassung_ra_2/zsfsg.tex
+++ b/fey-recharch/zusammenfassung_ra_2/zsfsg.tex
@@ -66,7 +66,7 @@ hohe Leistung bereitzustellen.
 \subsection{Bestandteile eingebetteter Systeme}
 
 Allgemein gilt für eingebettete Systeme, dass sie in größere Umgebungen
-integriert sind. Mit der Definition von Ernst: "`\ldots ein
+integriert sind. Mit der Definition von Ernst: "`\ldots{} ein
 Computersystem, was in ein technisches System eingebettet ist, jedoch
 selbst nicht als Computer erscheint."' Das wichtigste Merkmal ist, dass
 diese Systeme in \emph{analoge Umgebungen} eingebettet sind und mit der
@@ -93,7 +93,7 @@ wichtige Rolle.
 \paragraph{Komplexe Funktionalität.} Mikroprozessoren erreichen
 mittlerweile sehr hohe Funktionalität und stellen somit sehr komplexe
 Gebilde dar. Heutige Systeme enthalten mehrere 10 Millionen Transistoren
-und bearbeiten mehrere 10000 Zeilen Hochsprachencode. Es werden
+und bearbeiten mehrere 10\,000 Zeilen Hochsprachencode. Es werden
 \emph{Methoden aus der Softwaretechnik} auch für den Entwurf von
 eingebetteten Systemen angewendet.
 
@@ -149,8 +149,8 @@ Grundlagen hat:
 \emph{Bewertung:} Eine relativ einfache Strategie ist optimal. Die
 Prioritäten werden nach Größe der Perioden vergeben. Optimal bedeutet,
 dass bei einer möglichst großen CPU-Auslastung die \emph{deadlines} der
-einzelnen Prozessen dennoch eingehalten werden können. Jedoch gibt es
-keine 100 prozentige CPU-Auslastung, daher sind \emph{dynamische}
+einzelnen Prozesse dennoch eingehalten werden können. Jedoch gibt es
+keine 100"~prozentige CPU-Auslastung, daher sind \emph{dynamische}
 Strategien interessant.
 
 \paragraph{Auswahl von Prozessoren für eingebettete Systeme.} Viele
@@ -191,7 +191,7 @@ Den in diesen Fragen steckenden Problemstellungen begegnet man mit einer
 geeigneten \emph{Entwurfsmethodik}. Warum ist dies so? Entwurfsmethodik
 bietet die Möglichkeit einer \emph{Bewertung}, etwa ob die
 Anforderungen, also \emph{Funktionalität, Userinterfaces,
-Herstellungskosten, Leistungsverbrauch, \ldots}, erfüllt werden. Sie
+Herstellungskosten, Leistungsverbrauch, \ldots{}} erfüllt werden. Sie
 ermöglicht die Verwendung von \texttt{CAE/CAD}-Werkzeugen, also die
 Aufteilung des gesamten Entwicklungsprozesses in überschaubare
 Teilschritte. Weiterhin ist mit der Entwurfsmethode auch die
@@ -220,7 +220,7 @@ die Ausgabe als Funktion der Eingabe, letzteres hingegen
 \item Zuverlässigkeit.
 \end{itemize}
 
-In der Anforderungsphase wird weiterhin ein Modell, oder Attrappe des
+In der Anforderungsphase wird weiterhin ein Modell, oder eine Attrappe des
 Endprodukts erstellt, um dem Kunden einen Eindruck von Gewicht und
 Dimensionen des Gerätes zu vermitteln. Schliesslich wird ein
 \emph{Pflichtenheft} angelegt, dass die Anforderungen grob definiert und
@@ -231,7 +231,7 @@ Auf der folgenden \textbf{Spezifikationebene} wird eine \emph{detaillierte}
 Beschreibung des Systems vorgenommen, die als ein Vertrag zwischen dem
 Kunden und Systemarchitekt verstanden wird. Sie sollte ausformuliert
 sein, oder als mathematische Beschreibung, etwa durch  \texttt{UML-}Diagramme, Kontroll- und Datenflussgraphen (\texttt{CDFG}),
-Statecharts oder Automaten, vorliegen.
+Statecharts oder Automaten vorliegen.
 
 Nun wird auf der \textbf{Architekturebene} der Plan für die gesamte
 Systemarchitektur erstellt. Während die Spezifikation die Frage nach dem
